--- a/BTLon/HTML/GioHang.html
+++ b/BTLon/HTML/GioHang.html
@@ -81,7 +81,7 @@
             <div class="logo" style="background-color: #d8e4fc;">
                 <div class="logo-item item1"></div>
                 <div class="logo-item item2">
-                    <img src="/img/trangchu/logo.png" alt="ảnh" width="70%">
+                    <img src="../img/trangchu/logo.png" alt="ảnh" width="70%">
                 </div>
                 <div class="logo-item item3">
                     <div class="search">
