--- a/BTLon/HTML/Home.html
+++ b/BTLon/HTML/Home.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/CSS/grid.css">
+    <link rel="stylesheet" href="../CSS/grid.css">
    
-    <script src="/JS/jquery-3.6.0.min.js"></script>
-    <script src="/JS/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/CSS/home.css">
-    <script src="/JS/home.js"></script>
+    <script src="../JS/jquery-3.6.0.min.js"></script>
+    <script src="../JS/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../CSS/home.css">
+    <script src="../JS/home.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 </head>
 
@@ -61,7 +61,7 @@
             <div class="header l-12" style="background-color: #d8e4fc;">
                 <div class="row">
                     <div class="l-3 c-12">
-                        <img src="/img/trangchu/logo.png" alt="logo" width="75%">
+                        <img src="../img/trangchu/logo.png" alt="logo" width="75%">
                     </div>
                     <div class="l-5 l-o-4 c-o-1">
                         <div class="row">
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="header__img l-12">
-                <img src="/img/trangchu/1.jpg" alt="logo" width="100%">
+                <img src="../img/trangchu/1.jpg" alt="logo" width="100%">
             </div>
             <div class="menu" id="menu" style="background-color:aliceblue  ">
                 <ul>
@@ -104,17 +104,17 @@
                 <div class="row">
                     <h1 class="l-12 c-12 " style="text-align: center;">ĐIỀU BẠN QUAN TÂM</h1>
                     <div class="l-4 c-12 info__item">
-                        <img src="/img/trangchu/BANNER-Dieu-ban-quan-tam_SU-KHAC-BIET_380x179px.jpg" alt="ảnh">
+                        <img src="../img/trangchu/BANNER-Dieu-ban-quan-tam_SU-KHAC-BIET_380x179px.jpg" alt="ảnh">
                         <h4>Sự khác biệt</h4>
                         <p>Xem chi tiết</p>
                     </div>
                     <div class="l-4 c-12 info__item">
-                        <img src="/img/trangchu/BANNER-Dieu-ban-quan-tam_SU-KHAC-BIET_380x179px.jpg" alt="ảnh">
+                        <img src="../img/trangchu/BANNER-Dieu-ban-quan-tam_SU-KHAC-BIET_380x179px.jpg" alt="ảnh">
                         <h4>Sự khác biệt</h4>
                         <p>Xem chi tiết</p>
                     </div>
                     <div class="l-4 c-12 info__item">
-                        <img src="/img/trangchu/BANNER-Dieu-ban-quan-tam_SU-KHAC-BIET_380x179px.jpg" alt="ảnh">
+                        <img src="../img/trangchu/BANNER-Dieu-ban-quan-tam_SU-KHAC-BIET_380x179px.jpg" alt="ảnh">
                         <h4>Sự khác biệt</h4>
                         <p>Xem chi tiết</p>
                     </div>
@@ -124,7 +124,7 @@
             <div class="reason l-12">
                 <div class="row">
                     <div class="reason__img l-4 l-o-1 c-12">
-                        <img src="/img/trangchu/2.jpg" alt="ảnh" width="100%">
+                        <img src="../img/trangchu/2.jpg" alt="ảnh" width="100%">
                     </div>
                     <div class="reason__text l-6 c-12">
                         <h1>CHÀO MỪNG ĐẾN VỚI PEONIES</h1>
@@ -185,7 +185,7 @@
                 <div class="noiBat_main">
                     <div class="noiBat_item itemsp1 ">
                         <div class="img-container">
-                            <img src="/img/thiepnoibat/P0215_Botanical-Kraft-4-700x700.jpg" width="100%">
+                            <img src="../img/thiepnoibat/P0215_Botanical-Kraft-4-700x700.jpg" width="100%">
                         </div>
                         <div class="detailsp">
                             <p class="detailsp_tensp"><a id="sp1">Thiệp nổi tiếng 1</a> </p>
@@ -288,7 +288,7 @@
                 <div class="noiBat_main">
                     <div class="noiBat_item itemsp1 ">
                         <div class="img-container">
-                            <img src="/img/thiepnoibat/P0215_Botanical-Kraft-4-700x700.jpg" width="100%">
+                            <img src="../img/thiepnoibat/P0215_Botanical-Kraft-4-700x700.jpg" width="100%">
                         </div>
                         <div class="detailsp">
                             <p class="detailsp_tensp"><a id="sp1">Thiệp nổi tiếng 1</a> </p>
@@ -392,7 +392,7 @@
                             <button class="btnReason">Xem thêm</button>
                         </div>
                         <div class="reason__img l-8 c-12">
-                            <img src="/img/trangchu/BANNER_898x504px.jpg" alt="ảnh" width="75%"
+                            <img src="../img/trangchu/BANNER_898x504px.jpg" alt="ảnh" width="75%"
                                 style="margin-top: 30px;">
                         </div>
                     </div>
