--- a/BTLon/HTML/SanPham.html
+++ b/BTLon/HTML/SanPham.html
@@ -8,10 +8,10 @@
     <title>Sản phẩm</title>
     <link rel="stylesheet" href="../Css/sanPham.css">
     <link rel="stylesheet" href="/CSS/grid.css">
-    <!-- <link rel="stylesheet" href="/CSS/bootstrap.min.css"> -->
-    <script src="/JS/jquery-3.6.0.min.js"></script>
-    <script src="/JS/bootstrap.min.js"></script>
-    <script src="/JS/home.js"></script>
+   
+    <script src="../JS/jquery-3.6.0.min.js"></script>
+    <script src="../JS/bootstrap.min.js"></script>
+    <script src="../JS/home.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 </head>
 
@@ -59,7 +59,7 @@
             <div class="logo" style="background-color: #d8e4fc;">
                 <div class="logo-item item1"></div>
                 <div class="logo-item item2">
-                   <img src="/img/trangchu/logo.png" alt="ảnh" width="70%">
+                   <img src="../img/trangchu/logo.png" alt="ảnh" width="70%">
                 </div>
                 <div class="logo-item item3">
                     <div class="search">
