--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Home</title>
     <link rel="stylesheet" href="/CSS/grid.css">
    
-    <script src="/JS/jquery-3.6.0.min.js"></script>
-    <script src="/JS/bootstrap.min.js"></script>
+    <script src="JS/jquery-3.6.0.min.js"></script>
+    <script src="JS/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/CSS/home.css">
-    <script src="/JS/home.js"></script>
+    <script src="JS/home.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 </head>
 
