--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="header l-12" style="background-color: #d8e4fc;">
                 <div class="row">
                     <div class="l-3 c-12">
-                        <img src="/img/trangchu/logo.png" alt="logo" width="75%">
+                        <img src="img/trangchu/logo.png" alt="logo" width="75%">
                     </div>
                     <div class="l-5 l-o-4 c-o-1">
                         <div class="row">
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="header__img l-12">
-                <img src="/img/trangchu/1.jpg" alt="logo" width="100%">
+                <img src="img/trangchu/1.jpg" alt="logo" width="100%">
             </div>
             <div class="menu" id="menu" style="background-color:aliceblue  ">
                 <ul>
@@ -114,7 +114,7 @@
                         <p>Xem chi tiết</p>
                     </div>
                     <div class="l-4 c-12 info__item">
-                        <img src="/img/trangchu/BANNER-Dieu-ban-quan-tam_SU-KHAC-BIET_380x179px.jpg" alt="ảnh">
+                        <img src="img/trangchu/BANNER-Dieu-ban-quan-tam_SU-KHAC-BIET_380x179px.jpg" alt="ảnh">
                         <h4>Sự khác biệt</h4>
                         <p>Xem chi tiết</p>
                     </div>
@@ -124,7 +124,7 @@
             <div class="reason l-12">
                 <div class="row">
                     <div class="reason__img l-4 l-o-1 c-12">
-                        <img src="/img/trangchu/2.jpg" alt="ảnh" width="100%">
+                        <img src="img/trangchu/2.jpg" alt="ảnh" width="100%">
                     </div>
                     <div class="reason__text l-6 c-12">
                         <h1>CHÀO MỪNG ĐẾN VỚI PEONIES</h1>
