--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
                 <div class="row">
                     <h1 class="l-12 c-12 " style="text-align: center;">ĐIỀU BẠN QUAN TÂM</h1>
                     <div class="l-4 c-12 info__item">
-                        <img src="/img/trangchu/BANNER-Dieu-ban-quan-tam_SU-KHAC-BIET_380x179px.jpg" alt="ảnh">
+                        <img src="img/trangchu/BANNER-Dieu-ban-quan-tam_SU-KHAC-BIET_380x179px.jpg" alt="ảnh">
                         <h4>Sự khác biệt</h4>
                         <p>Xem chi tiết</p>
                     </div>
                     <div class="l-4 c-12 info__item">
-                        <img src="/img/trangchu/BANNER-Dieu-ban-quan-tam_SU-KHAC-BIET_380x179px.jpg" alt="ảnh">
+                        <img src="img/trangchu/BANNER-Dieu-ban-quan-tam_SU-KHAC-BIET_380x179px.jpg" alt="ảnh">
                         <h4>Sự khác biệt</h4>
                         <p>Xem chi tiết</p>
                     </div>
@@ -185,7 +185,7 @@
                 <div class="noiBat_main">
                     <div class="noiBat_item itemsp1 ">
                         <div class="img-container">
-                            <img src="/img/thiepnoibat/P0215_Botanical-Kraft-4-700x700.jpg" width="100%">
+                            <img src="img/thiepnoibat/P0215_Botanical-Kraft-4-700x700.jpg" width="100%">
                         </div>
                         <div class="detailsp">
                             <p class="detailsp_tensp"><a id="sp1">Thiệp nổi tiếng 1</a> </p>
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                     <div class="noiBat_item itemsp2">
-                        <div class="img-container"><img src="../img/thiepnoibat/P216_Botanical-Amona-3-700x700.jpg "
+                        <div class="img-container"><img src="img/thiepnoibat/P216_Botanical-Amona-3-700x700.jpg "
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -207,7 +207,7 @@
                         </div>
                     </div>
                     <div class="noiBat_item itemsp3">
-                        <div class="img-container"><img src="../img/thiepnoibat/TH050418-ORANFLO_01-700x700.jpg"
+                        <div class="img-container"><img src="img/thiepnoibat/TH050418-ORANFLO_01-700x700.jpg"
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -218,7 +218,7 @@
                         </div>
                     </div>
                     <div class="noiBat_item itemsp4">
-                        <div class="img-container"><img src="../img/thiepnoibat/U0045_Botanical-Nature_02-700x700.jpg"
+                        <div class="img-container"><img src="img/thiepnoibat/U0045_Botanical-Nature_02-700x700.jpg"
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -232,7 +232,7 @@
                 </div>
                 <div class="noiBat_main">
                     <div class="noiBat_item itemsp1 ">
-                        <div class="img-container"> <img src="../img/thiepnoibat/U0046_Greenery-Magnolia_01-700x700.jpg"
+                        <div class="img-container"> <img src="img/thiepnoibat/U0046_Greenery-Magnolia_01-700x700.jpg"
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -243,7 +243,7 @@
                         </div>
                     </div>
                     <div class="noiBat_item itemsp2">
-                        <div class="img-container"><img src="../img/thiepnoibat/P0215_Botanical-Kraft-4-700x700.jpg"
+                        <div class="img-container"><img src="img/thiepnoibat/P0215_Botanical-Kraft-4-700x700.jpg"
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -254,7 +254,7 @@
                         </div>
                     </div>
                     <div class="noiBat_item itemsp3">
-                        <div class="img-container"><img src="../img/thiepnoibat/P216_Botanical-Amona-3-700x700.jpg"
+                        <div class="img-container"><img src="img/thiepnoibat/P216_Botanical-Amona-3-700x700.jpg"
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -265,7 +265,7 @@
                         </div>
                     </div>
                     <div class="noiBat_item itemsp4">
-                        <div class="img-container"><img src="../img/thiepnoibat/U0046_Greenery-Magnolia_01-700x700.jpg"
+                        <div class="img-container"><img src="img/thiepnoibat/U0046_Greenery-Magnolia_01-700x700.jpg"
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -288,7 +288,7 @@
                 <div class="noiBat_main">
                     <div class="noiBat_item itemsp1 ">
                         <div class="img-container">
-                            <img src="/img/thiepnoibat/P0215_Botanical-Kraft-4-700x700.jpg" width="100%">
+                            <img src="img/thiepnoibat/P0215_Botanical-Kraft-4-700x700.jpg" width="100%">
                         </div>
                         <div class="detailsp">
                             <p class="detailsp_tensp"><a id="sp1">Thiệp nổi tiếng 1</a> </p>
@@ -298,7 +298,7 @@
                         </div>
                     </div>
                     <div class="noiBat_item itemsp2">
-                        <div class="img-container"><img src="../img/thiepnoibat/P216_Botanical-Amona-3-700x700.jpg "
+                        <div class="img-container"><img src="img/thiepnoibat/P216_Botanical-Amona-3-700x700.jpg "
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -310,7 +310,7 @@
                         </div>
                     </div>
                     <div class="noiBat_item itemsp3">
-                        <div class="img-container"><img src="../img/thiepnoibat/TH050418-ORANFLO_01-700x700.jpg"
+                        <div class="img-container"><img src="img/thiepnoibat/TH050418-ORANFLO_01-700x700.jpg"
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -321,7 +321,7 @@
                         </div>
                     </div>
                     <div class="noiBat_item itemsp4">
-                        <div class="img-container"><img src="../img/thiepnoibat/U0045_Botanical-Nature_02-700x700.jpg"
+                        <div class="img-container"><img src="img/thiepnoibat/U0045_Botanical-Nature_02-700x700.jpg"
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -335,7 +335,7 @@
                 </div>
                 <div class="noiBat_main">
                     <div class="noiBat_item itemsp1 ">
-                        <div class="img-container"> <img src="../img/thiepnoibat/U0046_Greenery-Magnolia_01-700x700.jpg"
+                        <div class="img-container"> <img src="img/thiepnoibat/U0046_Greenery-Magnolia_01-700x700.jpg"
                                 width="100%"></div>
 
                         <div class="detailsp">
