--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/CSS/grid.css">
+    <link rel="stylesheet" href="CSS/grid.css">
    
     <script src="JS/jquery-3.6.0.min.js"></script>
     <script src="JS/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/CSS/home.css">
+    <link rel="stylesheet" href="CSS/home.css">
     <script src="JS/home.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 </head>
