--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         </div>
                     </div>
                     <div class="noiBat_item itemsp2">
-                        <div class="img-container"><img src="../img/thiepnoibat/P0215_Botanical-Kraft-4-700x700.jpg"
+                        <div class="img-container"><img src="img/thiepnoibat/P0215_Botanical-Kraft-4-700x700.jpg"
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -357,7 +357,7 @@
                         </div>
                     </div>
                     <div class="noiBat_item itemsp3">
-                        <div class="img-container"><img src="../img/thiepnoibat/P216_Botanical-Amona-3-700x700.jpg"
+                        <div class="img-container"><img src="img/thiepnoibat/P216_Botanical-Amona-3-700x700.jpg"
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -368,7 +368,7 @@
                         </div>
                     </div>
                     <div class="noiBat_item itemsp4">
-                        <div class="img-container"><img src="../img/thiepnoibat/U0046_Greenery-Magnolia_01-700x700.jpg"
+                        <div class="img-container"><img src="img/thiepnoibat/U0046_Greenery-Magnolia_01-700x700.jpg"
                                 width="100%"></div>
 
                         <div class="detailsp">
@@ -434,7 +434,7 @@
                         <div class="footer">
                             <div class="footer_item left">
                                 <ul class="footer_ul">
-                                    <li><img src="../img/trangchu/logo.png" width="400px;"></li>
+                                    <li><img src="img/trangchu/logo.png" width="400px;"></li>
                                 </ul>
                             </div>
                             <div class="footer_item between">
